--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="http://leafletjs.com/dist/leaflet.css" />  
 	<link rel="stylesheet" href="css/style.css" />
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>s"></script>
+	<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
    	<script src="http://leafletjs.com/dist/leaflet.js"></script>
 	<script src="js/dail.js"></script>
 	<script>
