--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
       <link rel="shortcut icon" href="img/favicon.ico" /> 
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css" />  
-	<link rel="stylesheet" href="http://leafletjs.com/dist/leaflet.css" />  
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />  
 	<link rel="stylesheet" href="css/style.css" />
+
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
-   	<script src="http://leafletjs.com/dist/leaflet.js"></script>
+   	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 	<script src="js/dail.js"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
