--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div data-role="content">
       <p><em>Danmarks adresser i lommen</em> giver dig mulighed for at tilgå aktuelle oplysninger om Danmarks autoritative adresser.</p>
       <p>Formålet med applikationen er give et eksempel på, hvad <a href='http://dawa.aws.dk'>Danmarks Adressers Web API, DAWA,</a> kan bruges til.</p>
-      <p>Applikationen er udviklet af <a href="http://www.gst.dk">Geodatastyrelsen</a></p> 
+      <p>Applikationen er udviklet af <a href="http://sdfe.dk">Styrelsen for Dataforsyning og Effektivisering</a></p> 
       <p>Du kan holde dig orienteret om DAWA og tilknyttede aktiviteter i <a href="http://digitaliser.dk/group/334445">AWS-gruppen på Digitaliser.dk</a> samt på <a href="https://twitter.com/AWS_Suiten">Twitter</a></p>
     </div>
   </div>
